--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,13 +4,14 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
-    <uses-permission android:name="android.permission.RECORD_VIDEO"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.CAPTURE_AUDIO_OUTPUT" />
     <uses-permission android:name="android.permission.CAPTURE_VIDEO_OUTPUT" />
-    <uses-feature android:name="android.hardware.Camera"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-feature android:name="android.hardware.camera"/>
+    <uses-feature android:name="android.hardware.camera.autofocus"/>
 
     <application
         android:allowBackup="true"
@@ -18,6 +19,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:hardwareAccelerated="true"
         android:name=".RtspApplication"
         android:theme="@style/AppTheme" >
         <activity android:name=".view.activity.CameraListActivity" android:screenOrientation="landscape">
@@ -27,7 +29,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".view.activity.CameraAddActivity" android:screenOrientation="landscape" android:windowSoftInputMode="adjustResize|stateVisible"/>
-        <activity android:name=".view.activity.CameraPlayActivity" android:screenOrientation="landscape"/>
+        <activity android:name=".view.activity.CameraPlayActivity" android:screenOrientation="landscape"  />
+        <activity android:name=".view.activity.CameraSurfaceActivity" android:screenOrientation="landscape"  />
+        <activity android:name=".view.activity.CameraVlcActivity" android:screenOrientation="landscape"  />
+        <provider
+            android:authorities="com.producemedia.camera"
+            android:name=".modle.data.ScreenShotProvider"/>
     </application>
 
 </manifest>
